tests/feature_tests/snapshots/e2e__feature_tests__unalias_error__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm --log-level='error' env | source
fnm unalias lts 2>&1 | grep 'Requested alias lts not found'
